--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Database Configuration
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=executive_secretariat
+POSTGRES_DB=executive
 
 # JWT Configuration
 JWT_SECRET=your-jwt-secret-key-change-in-production
