--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: executive_secretariat_test
+          POSTGRES_DB: executive_test
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -47,7 +47,7 @@ jobs:
         cd Backend/NestJS
         npm run test
       env:
-        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/executive_secretariat_test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/executive_test
         JWT_SECRET: test-jwt-secret
         ENCRYPTION_SECRET_KEY: test-encryption-key
 
