--- a/Backend/FastAPI/Dockerfile
+++ b/Backend/FastAPI/Dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.9
+FROM python:3.14-slim
 
 WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN python -m pip install --no-cache-dir --upgrade pip && \
+    python -m pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./main.py /code/main.py
 
